# mondoshawan

./: .gitattributes  .gitignore  ACCOUNT_ABSTRACTION_COMPLETE_SUMMARY.md  ACCOUNT_ABSTRACTION_FINAL_STATUS.md  ACCOUNT_ABSTRACTION_IMPLEMENTATION_PLAN.md  ACCOUNT_ABSTRACTION_PHASE1_COMPLETE.md  ACCOUNT_ABSTRACTION_PHASE2_COMPLETE.md  ACCOUNT_ABSTRACTION_PHASE2_PROGRESS.md  ACCOUNT_ABSTRACTION_PHASE3_COMPLETE.md  ACCOUNT_ABSTRACTION_PHASE4_COMPLETE.md  ACCOUNT_ABSTRACTION_PHASE4_PLAN.md  ACCOUNT_ABSTRACTION_PHASE5_COMPLETE.md  ACCOUNT_ABSTRACTION_TESTING_COMPLETE.md  ACCOUNT_ABSTRACTION_USER_GUIDE.md  ADDITIONAL_DIFFERENTIATING_FEATURES.md  ADDITIONAL_FEATURES_PRIORITIZED.md  AI_IMPLEMENTATION_QUICKSTART.md  AI_IMPLEMENTATION_STATUS.md  AI_NATIVE_L1_STRATEGY.md  ASIC_DOMINANCE_MONITORING.md  BLOCKCHAIN_STATUS.md  BRANDING.md  BRANDING_ASSETS.md  BUGFIXES_NONCE_AND_SHARD_POOL.md  BUILD_INSTRUCTIONS.md  BUILD_MSVCRT_FIXED.md  CHANNEL_BASED_DEADLOCK_FIX.md  CLOUD_DEPLOYMENT_COMPARISON.md  CODE_OF_CONDUCT.md  CONSENSUS_CLARIFICATION.md  CONTRIBUTING.md  COPY_RUNTIME_LIBS.md  CURRENT_STATUS_AND_NEXT_STEPS.md  CURRENT_STATUS_SUMMARY.md  DEADLOCK_FIX.md  DEADLOCK_FIX_COMPLETE.md  DEMO_GUIDE.md  DESIGN_BRIEF.md  DESKTOP_APP_COMPLETE_SUMMARY.md  DESKTOP_APP_IMPLEMENTATION_STATUS.md  (+161 more)
mondoshawan-blockchain/: BLOCK_PROPAGATION_IMPLEMENTATION.md  Cargo.toml  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_STATUS.md  SHARDING_ACTIVATION_REPORT.md  TESTNET_SETUP.md  node.err
mondoshawan-blockchain/data-node1/: db
mondoshawan-blockchain/src/: config.rs  consensus.rs  error.rs  evm.rs  lib.rs  light_client.rs  metrics.rs  mining.rs  network.rs  reputation.rs  rpc.rs  sharding.rs  storage.rs  types.rs
mondoshawan-blockchain/src/account_abstraction/: batch.rs  factory.rs  integration_tests.rs  integration_tests_phase5.rs  mod.rs  multisig.rs  multisig_integration_tests.rs  registry.rs  social_recovery.rs  tests.rs  wallet.rs
mondoshawan-blockchain/src/blockchain/: block.rs  mod.rs  tests.rs  tests_quick_wins.rs
mondoshawan-blockchain/src/evm/: benchmark.rs  integration.rs  mod.rs  (+2 more)
mondoshawan-blockchain/tests/: end_to_end.rs  evm_integration.rs  integration_test.rs  mining_blockchain.rs  mod.rs  network_blockchain.rs  rpc_test.rs  sharding_basic_test.rs  sharding_e2e.rs  sharding_integration.rs  transaction_pool.rs
mondoshawan-desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+104 files in other folders)
