[package]
name = "mondoshawan-blockchain"
version = "0.1.0"
edition = "2021"
authors = ["Mondoshawan Team"]
description = "Mondoshawan Protocol (MSHW) - High-performance sharded blockchain with TriStream mining"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
blake3 = "1.5"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
revm = "33.1"
sled = "0.34"
tempfile = "3.8"
bincode = "1.3"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
config = "0.14"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.13"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
# Post-Quantum Cryptography
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.5"
# pqcrypto-kyber = "0.5"  # Temporarily disabled due to Windows/MSVC build issues
aes-gcm = "0.10"
crossbeam-queue = "0.3"
# zk-SNARKs for Privacy Layer
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-std = "0.4"
ark-poly = "0.4"

[[bin]]
name = "node"
path = "src/bin/node.rs"

[dev-dependencies]
tokio-test = "0.4"
